Fail dbcheck if one batch failed waiting for write concern

XMLWordPrintableJSON

    • Replication
    • Fully Compatible
    • v8.0, v7.3, v7.0, v6.0, v5.0
    • Repl 2024-04-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If dbcheck fails to wait for the write concern, it could indicate a problem with the secondaries keeping up with the primary. Continuing dbcheck on the primary could exacerbate the issue, so we should halt dbcheck in such cases.

            Assignee:
            Huayu Ouyang
            Reporter:
            Moustafa Maher
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: