SERVER-88318 Fail dbcheck data consistency check if one batch failed waiting for write concern (#20774)

(cherry picked from commit 55de116aef0c05b74d1ad73871b1a3c9e0896c14)

GitOrigin-RevId: be61aaf24a96e42e5123e67f29cc5a3a70823f87